# packages/buntok-test/public/docs/swagger.json
@@ -188,8 +188,39 @@
         }
       }
     },
+    "/tests/get-data": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/tests/upload": {
       "post": {
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "docs": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary",
+                      "description": "Binary file (accept: image/png, image/jpeg, image/webp)"
+                    }
+                  }
+                },
+                "required": [
+                  "docs"
+                ]
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Success"
